--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ h1,
 }
 
 #check-btn {
+  cursor: pointer;
   font-size: 1rem;
   padding: 0.2rem 0.5rem;
   margin: 1rem auto;
@@ -46,6 +47,7 @@ h1,
   border-radius: 50%;
   border: 3px solid greenyellow;
 }
+
 #repo-heading {
   margin: auto 5rem;
   text-align: center;
@@ -53,6 +55,7 @@ h1,
   color: white;
   text-transform: uppercase;
 }
+
 a {
   text-decoration: none;
   font-size: large;
